# math-facts

./: CMakeLists.txt  LICENSE  afternoon-sun.xcf  arithmetic-problem.cpp  arithmetic-problem.hpp  clock-center-post.xcf  clock-face.xcf  clock-hour-hand.xcf  clock-minute-hand.xcf  clock-readme.txt  correct-answer.xcf  main.cpp  mainicon.xcf  math-button-image-add.xcf  math-button-image-clock.xcf  math-button-image-div.xcf  math-button-image-mul.xcf  math-button-image-sub.xcf  math-buttons-image-sheet.xcf  math-facts-title.xcf  math-facts-widget.cpp  math-facts-widget.hpp  math-facts.ini  math-facts.qrc  math-facts.rc  morning-sun.xcf  problem.cpp  problem.hpp  stopwatch-base.xcf  stopwatch-hand.xcf  stopwatch-readme.txt  time-problem.cpp  time-problem.hpp  title-stage-buttons.ui  wrong-answer.xcf
